--- a/_config.yml
+++ b/_config.yml
@@ -7,20 +7,19 @@ name: tommy colligan's website
 
 # Short bio or description (displayed in the header)
 description: # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/photo.jpg
+avatar: "https://tcolligan4.github.io/images/photo.jpg"
 # Flags below are optional
 #
 author:
   name             : "Thomas Coligan"
-  avatar           : "images/photo.jpg"
+  avatar           : "https://tcolligan4.github.io/images/photo.jpg"
   bio              : "Grad Student"
   location         : "UM"
 
 locale: "en-US"
-logo: "images/photo.jpg"
+logo: "https://tcolligan4.github.io/images/photo.jpg"
 # Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
+footer-links: 
   email:
   facebook:
   flickr:
@@ -44,13 +43,12 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
-
+url: "https://tcolligan4.github.io" 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+# baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
