--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,15 @@
 #
 
 # Name of your site (displayed in the header)
-name: tommy colligan's website
+name: tommy c's website
 
 # Short bio or description (displayed in the header)
-description: # URL of your avatar or profile pic (you could use your GitHub profile pic)
+description: stuff i'm interested in
 avatar: "https://tcolligan4.github.io/images/photo.jpg"
 # Flags below are optional
 #
 author:
-  name             : "Thomas Coligan"
+  name             : "Thomas Colligan"
   avatar           : "https://tcolligan4.github.io/images/photo.jpg"
   bio              : "Grad Student"
   location         : "UM"
@@ -20,7 +20,7 @@ locale: "en-US"
 logo: "https://tcolligan4.github.io/images/photo.jpg"
 # Includes an icon in the footer for each username you enter
 footer-links: 
-  email:
+  email: thomas.colligan@umontana.edu
   facebook:
   flickr:
   github: tcolligan4
