--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: tommy c's website
+name: tommy colligan
 
 # Short bio or description (displayed in the header)
-description: stuff i'm interested in
+description: 
 avatar: "https://tcolligan4.github.io/images/photo.jpg"
 # Flags below are optional
 #
