--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ name: Thomas Colligan
 
 # Short bio or description (displayed in the header)
 description: Graduate student at the University of Montana.
-avatar: "/images/img.jpg"
+avatar: "/images/img_cropped.jpg"
 # Flags below are optional
 #
 
