--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ description: research notes, mostly
 # List of links in the navigation bar
 navbar-links:
   Blog: "blog"
+  Photos: "photos"
   CV: "/assets/cv.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
