--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,6 @@ description: research notes, mostly
 # List of links in the navigation bar
 navbar-links:
   Blog: "blog"
-  Photos: "photos"
   CV: "/assets/cv.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
@@ -159,6 +158,7 @@ paginate_path: "/blog/page:num/"
 
 kramdown:
   input: GFM
+  math_engine: mathjax
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
