Rework blog layour

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  rss: true
+  rss: false
   email: "thomas.colligan@umontana.edu"
 #  facebook: 
   github: tcolligan4
@@ -169,7 +169,7 @@ defaults:
     values:
       layout: "post"
       comments: true  # add comments to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
+      social-share: false # add social media sharing buttons to all blog posts
   -
     scope:
       path: "" # all files
