--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "public/themes/PaperMod"]
 	path = public/themes/PaperMod
 	url = https://github.com/adityatelange/hugo-PaperMod
+[submodule "themes/ananke"]
+	path = themes/ananke
+	url = https://github.com/theNewDynamic/gohugo-theme-ananke.git
