fix grammatical error

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -78,7 +78,7 @@ params:
       is a research accelerant. He's the main author of the
       [LPJ-EOSIM Wetland Methane
       products](https://earth.gov/ghgcenter/data-catalog/lpjeosim-wetlandch4-grid-v2)
-      on the US Greenhouse Gas Center website. In the past, Tom has been a research scientist in Machine Learning the University of Arizona and University of Montana."
+      on the US Greenhouse Gas Center website. In the past, Tom has been a research scientist in Machine Learning at the University of Arizona and University of Montana."
 
 
   analytics:
