--- a/hugo.yaml
+++ b/hugo.yaml
@@ -44,7 +44,7 @@ params:
   assets:
     # disablehljs: true # to disable highlight.js
     # disablefingerprinting: true
-    favicon: "/favicon.ico"
+    favicon: "favicon.ico"
 
   label:
     text: "Tom Colligan"
@@ -53,18 +53,31 @@ params:
 
   # profile-mode
   profileMode:
-    enabled: false # needs to be explicitly set
-    title: ExampleSite
-    subtitle: "This is subtitle"
-    imageUrl: "<img location>"
-    imageWidth: 120
-    imageHeight: 120
+    enabled: true # needs to be explicitly set
+    title: " "
+    subtitle: "Tom is a [scientific software engineer](/sse) at NASA Goddard Space Flight Center
+      currently working on operationalizing the LPJ-EOSIM Dynamic Global
+      Vegetation model.
+      He's particularly interested in writing [simple
+      code](https://www.amazon.com/Philosophy-Software-Design-John-Ousterhout/dp/1732102201)
+      to enable impactful science and engineering, and believes that good software
+      is a research accelerant. He's the main author of the
+      [LPJ-EOSIM Wetland Methane
+      products](https://earth.gov/ghgcenter/data-catalog/lpjeosim-wetlandch4-grid-v2)
+      on the US Greenhouse Gas Center website. In the past, Tom has been a research scientist in Machine Learning at the University of Arizona and University of Montana.
+      \n
+      \n
+      <br>
+      In addition to his current work on the LPJ-EOSIM model, he's worked on a diverse range of projects including geospatial machine learning to classify irrigation with Landsat data,
+      CNNs for sound classification, streamflow prediction, novel contrastive embedding techniques for protein retrieval, and eclipse-induced gravity
+      wave detection. The most common throughline in his career has been the ability to write clean analytical code to further
+      research and development goals."
+        
+
+    imageUrl: "headshot.jpeg"
+    imageWidth: 300
+    imageHeight: 300
     imageTitle: my image
-    buttons:
-      - name: Posts
-        url: posts
-      - name: Tags
-        url: tags
 
   # home-info mode
   homeInfoParams:
