--- a/hugo.yaml
+++ b/hugo.yaml
@@ -123,9 +123,9 @@ menu:
       name: meet
       url: /calendar.html
       weight: 30
-    - identifier: reflections
-      name: reflections
-      url: /reflections
+    - identifier: year-in-review
+      name: year-in-review
+      url: /year-in-review
       weight: 30
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
