--- a/config.yml
+++ b/config.yml
@@ -79,11 +79,11 @@ params:
 
   socialIcons:
     - name: x
-      url: "https://x.com/"
+      url: "https://x.com/t_colligan"
     - name: stackoverflow
       url: "https://stackoverflow.com"
     - name: github
-      url: "https://github.com/"
+      url: "https://github.com/colligant"
 
   analytics:
     google:
@@ -123,7 +123,7 @@ menu:
     - identifier: tags
       name: tags
       url: /tags/
-      weight: 20
+      weight: 2, cleverly split inputs, etc.O
     - identifier: example
       name: example.org
       url: https://example.org
