--- a/hugo.yaml
+++ b/hugo.yaml
@@ -125,6 +125,9 @@ pygmentsUseClasses: true
 markup:
   highlight:
     noClasses: false
+  goldmark:
+    renderer:
+      unsafe: true
     # anchorLineNos: true
     # codeFences: true
     # guessSyntax: true
